<resources>
    <string name="app_name">Kelasku</string>
    <string name="mustFill">Wajib Diisi</string>
    <string name="mustFillCurrentPassword">Masukan Password Lama Anda</string>
    <string name="mustFillNewPassword">Masukan Password Baru Anda</string>
    <string name="mustFillPassword">Password Tidak Boleh Kosong</string>
    <string name="mustFillConfirmPassword">Konfirmasi Password Baru Anda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="msg_token_fmt" formatted="true"> %s Token Confirmed</string>
    <string name="favourite">Favourite</string>
    <string name="logout">Logout</string>
    <string name="edit_password">Edit Password</string>
    <string name="whats_app">Whats App</string>
    <string name="return_button">Return Button</string>
    <string name="splash_description">consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula ipsum a arcu cursus vitae congue</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="welcome_to_kelasku_app">Welcome to Kelasku App</string>
    <string name="image_splash">Image Splash</string>
    <string name="password_did_t_match">Password did\'t match</string>
    <string name="password_must_be_6_characters_long">Password Must be 6 characters long</string>
    <string name="register_account">Register Account</string>
    <string name="fill_your_details_or_continue_with_social_media">Fill your details or continue with social media</string>
    <string name="nama">Nama</string>
    <string name="nomor_telephone">Nomor Telephone</string>
    <string name="school">School</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="member_list">Member List</string>
    <string name="search_your_friends">Search Your Friends</string>
    <string name="button_menu">Button Menu</string>
    <string name="image_profile">Image Profile</string>
    <string name="biodata">Biodata</string>
    <string name="like_button">Like Button</string>
    <string name="dislike_button">Dislike Button</string>
    <string name="name">Name</string>
    <string name="telephone">Telephone</string>
    <string name="colek">Colek</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="save">Save</string>
    <string name="button_image">Button Image</string>
    <string name="button_profile">Button Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="log_out">Log Out</string>
    <string name="anda_yakin_ingin_keluar_dari_aplikasi_ini_jika_keluar_semua_data_anda_akan_dihapus_dari_perangkat_ini">Anda yakin ingin keluar dari aplikasi ini? Jika keluar semua data anda akan dihapus dari perangkat ini.</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="fill_your_details_or_continue_with_register">Fill your details or continue with register</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="pencarian_tidak_ditemukan">Pencarian Tidak Ditemukan</string>
    <string name="fill_your_details_to_register_account">Fill your details to register account</string>
    <string name="kelasku">Kelasku</string>
</resources>