<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_editPassword"
        android:icon="@drawable/icon_edit"
        android:title="@string/edit_password" />
    <item
        android:id="@+id/nav_favourite"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:iconTint="@color/text_red"
        android:iconTintMode="add"
        android:title="@string/favourite" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                app:iconTint="@color/my_hint_color"
                android:title="@string/logout"/>

</menu>

