<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFF2F0"
        tools:context=".ui.register.RegisterActivity">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:background="@null"
            android:contentDescription="@string/return_button"
            android:foreground="?selectableItemBackgroundBorderless"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:text="@string/register_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBack" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/fill_your_details_to_register_account"
            android:textColor="#323131"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColorHint="@color/my_hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:startIconDrawable="@drawable/person_vector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_background"
                android:hint="@string/nama"
                android:inputType="text"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColorHint="@color/my_hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputName"
            app:startIconDrawable="@drawable/telephone_vector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_background"
                android:hint="@string/nomor_telephone"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputSchool"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/edittext_background"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputPhone"
            android:textColorHint="@color/my_hint_color"
            app:startIconDrawable="@drawable/school_vector">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00CD1430"
                android:dropDownAnchor="@id/autoCompleteSpinner"
                android:hint="@string/school"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColorHint="@color/my_hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputSchool"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/password_vector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="@color/my_hint_color"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/password_vector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_background"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPasswordNotMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/password_did_t_match"
            android:textColor="@color/text_red"
            android:textSize="@dimen/_13sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPassword" />

        <TextView
            android:id="@+id/tvPasswordLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/password_must_be_6_characters_long"
            android:textColor="@color/text_red"
            android:textSize="@dimen/_13sdp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_55sdp"
            android:background="@drawable/button_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackgroundBorderless"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputConfirmPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
