<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.bennohan.kelasku.data.User" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.editPassword.EditPasswordActivity"
        android:background="#EFF2F0">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@null"
            android:scaleType="fitXY"
            android:contentDescription="@string/return_button"
            android:foreground="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/edit_password"
            android:textColor="@color/my_hint_color"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="48dp"
            android:text="@string/password_lama"
            android:textColor="@color/my_hint_color"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="@dimen/_28sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/password_vector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:text="@string/password_baru"
            android:textColor="@color/my_hint_color"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPasswordNew"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="@dimen/_28sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/password_vector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordNew"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:text="@string/konfirmasi_password"
            android:textColor="@color/my_hint_color"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPasswordNew" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="@dimen/_28sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/password_vector">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPasswordNotMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/password_did_t_match"
            android:textSize="@dimen/_13sdp"
            android:visibility="gone"
            android:textColor="@color/text_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPass" />

        <TextView
            android:id="@+id/tvPasswordLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25sdp"
            android:text="@string/password_must_be_6_characters_long"
            android:textSize="@dimen/_13sdp"
            android:visibility="gone"
            android:textColor="@color/text_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPass"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEditPassword"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="@dimen/_42sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save"
            android:foreground="?selectableItemBackgroundBorderless"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_40sdp"
            android:background="@drawable/button_background"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
